# Video_hosting

./: .env  .gitignor  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres_data/base/16384/: 1247  1247_fsm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16434  16435  16440  16441  16443  16445  16454  16467  16468  16573  16574  16580  16582  16584  16586  16592  16600  2224  24859  24860  24865  24866  24868  24870  24872  24873  24878  24879  24886  24887  24894  25093  (+127 more)
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
postgres_data/pg_xact/: 0000
src/: celery_app.py  config.py  db.py  get_current_user.py  main.py  redis_client.py  worker.py
src/auth/: auth_router.py  auth_shema.py  auth_utilits.py
src/channel/: channel_router.py  channel_shema.py
src/media/: media_router.py  media_shema.py  media_utillits.py
src/models/: ChannelModel.py  CommentModel.py  UserModel.py  VideoModel.py
